# event_agent

./: .dockerignore  .env.example  .gitignore  CODEBASE_AUDIT.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  Makefile  PITCH.md  README.md  TESTING.md  architecture.md  conftest.py  docker-compose.yml  improvements.md  pyproject.toml  requirements.txt  skills-lock.json  test_api_e2e.py
.opencode/plans/: cloudflare-self-hosted-architecture.md  group-planning-design.md  implementation-kickoff.md  prototype.html
docs/agents/: quickstart.md
docs/auditor/: README.md
docs/calendar_agent/: README.md
docs/discovery_agent/: README.md
docs/input_parser/: README.md
docs/orchestration/: README.md
docs/resilience/: README.md
docs/stack/: README.md
observability/prometheus/: prometheus.yml
scripts/: bench-frontend.sh
src/: __init__.py  api.py  deps.py
src/auditor/: __init__.py  verifier.py
src/calendar_agent/: __init__.py  scheduler.py
src/discovery_agent/: __init__.py  graph.py  query_formatter.py  searcher.py
src/input_parser/: __init__.py  parser.py
src/location/: __init__.py  country.py  geo.py
src/models/: __init__.py  schemas.py
tauri_frontend/event_agent_frontend/src-tauri/: Cargo.toml  tauri.conf.json
tauri_frontend/event_agent_frontend/src-tauri/.cargo/: config.toml
tauri_frontend/event_agent_frontend/src-tauri/capabilities/: desktop.json
tauri_frontend/event_agent_frontend/src-tauri/src/: lib.rs  main.rs
web/: eslint.config.mjs  instrumentation.ts  next.config.ts  package-lock.json  package.json  sentry.edge.config.ts  wrangler.jsonc
(+47 files in other folders)
