[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "event-searcher"
version = "0.1.0"
description = "EventFinder AI - Multi-agent event discovery system"
requires-python = ">=3.10"
authors = [
    {name = "Event Searcher Team"}
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "langgraph>=0.0.1",
    "langchain>=0.1.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "nylas==6.14.2",
    faster-whisper=1.2.1,
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pytest-mock>=3.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "tests*"]
